// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleMeta /> should match snapshot 1`] = `
.c0 {
  font-size: 1.6rem;
  color: #AAAAAA;
  font-style: italic;
}

.c0 .categories span::after {
  content: ', ';
}

.c0 .categories span:last-child:after {
  content: '';
}

.c0 a {
  color: #DC143C;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

<div
  class="c0"
>
  <p>
    <span>
      Por 
    </span>
    <a
      href="/author/surfista"
    >
      surfista
    </a>
    <span
      class="separator"
    >
       | 
    </span>
    <time
      datetime="2025-02-12T11:41:13.991Z"
    >
      12 de fev. de 2025
    </time>
    <span
      class="separator"
    >
       | 
    </span>
    <span
      class="categories"
    >
      <span>
        <a
          href="/category/off-topic"
        >
          Off Topic
        </a>
      </span>
      <span>
        <a
          href="/category/tech"
        >
          tech
        </a>
      </span>
    </span>
  </p>
</div>
`;

exports[`<ArticleMeta /> should match snapshot with no author and categories 1`] = `
.c0 {
  font-size: 1.6rem;
  color: #AAAAAA;
  font-style: italic;
}

.c0 .categories span::after {
  content: ', ';
}

.c0 .categories span:last-child:after {
  content: '';
}

.c0 a {
  color: #DC143C;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c0 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

<div>
  <div
    class="c0"
  >
    <p>
      <time
        datetime="2025-02-12T11:41:13.991Z"
      >
        12 de fev. de 2025
      </time>
    </p>
  </div>
</div>
`;
